--- a/HomeLedApp/UI/LedCtrlSettingsPopUp.xaml
+++ b/HomeLedApp/UI/LedCtrlSettingsPopUp.xaml
@@ -4,7 +4,7 @@
                 xmlns:resx="clr-namespace:HomeLedApp.Strings"
                 xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
                 xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
-                x:Class="HomeLedApp.UI.Rename">
+                x:Class="HomeLedApp.UI.LedCtrlSettings">
     <pages:PopupPage.Animation>
         <animations:ScaleAnimation
                     PositionIn="Center"
