--- a/HomeLedApp/UI/LedCtrlSettingsPopUp.xaml
+++ b/HomeLedApp/UI/LedCtrlSettingsPopUp.xaml
@@ -19,8 +19,18 @@
     </pages:PopupPage.Animation>
     <Frame CornerRadius="10" HorizontalOptions="Center" VerticalOptions="Center" BackgroundColor="Beige">
         <StackLayout VerticalOptions="Center" HorizontalOptions="Center" Padding="20" Margin="10">
-            <Label Text="{resx:AppResources RenameDevice_Info}"/>
-            <Editor x:Name="editor" Text="{x:Binding Hostname, Mode=TwoWay}" AutoSize="TextChanges" IsSpellCheckEnabled="False" MaxLength="16"/>
+            <StackLayout Orientation="Horizontal">
+                <Label Text="{resx:AppResources RenameDevice_Info}"/>
+                <Editor Text="{x:Binding Hostname, Mode=TwoWay}" AutoSize="TextChanges" IsSpellCheckEnabled="False" MaxLength="16"/>
+            </StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Label Text="{resx:AppResources SetLEDNumber_Info}"/>
+                <Editor Text="{x:Binding DataPin, Mode=TwoWay}" AutoSize="TextChanges" IsSpellCheckEnabled="False" MaxLength="3" Keyboard="Numeric"/>
+            </StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Label Text="{resx:AppResources SetDataPin_Info}"/>
+                <Editor Text="{x:Binding NumberLED, Mode=TwoWay}" AutoSize="TextChanges" IsSpellCheckEnabled="False" MaxLength="4" Keyboard="Numeric"/>
+            </StackLayout>
             <Button CornerRadius="5" Text="{resx:AppResources SendAndClose}" HorizontalOptions="Center" Clicked="OK"/>
         </StackLayout>
     </Frame>
