chamge meaning of multi to float

--- a/HomeLedApp/UI/MainPage.xaml
+++ b/HomeLedApp/UI/MainPage.xaml
@@ -173,7 +173,7 @@
                             </Label.GestureRecognizers>
                         </Label>
                     </StackLayout>
-                    <ui:SliderElement Grid.Row="1" TitleResource="VerticalOffset" Property="Model.Sin_VerticalOffset" DetailSteps="true"/>
+                    <ui:SliderElement Grid.Row="1" TitleResource="VerticalOffset" Type="mul" Property="Model.Sin_VerticalOffset" DetailSteps="true"/>
                     <ui:SliderElement Grid.Row="2" TitleResource="HorizontalOffset" Property="Model.Sin_HorizontalOffset" DetailSteps="true"/>
                     <ui:SliderElement Grid.Row="3" TitleResource="Scale" Property="Model.Sin_Scale" DetailSteps="true" x:Name="Sin_Slider_Scale"/>
                     <ui:SliderElement Grid.Row="4" TitleResource="Stepsize" Property="Model.Sin_StepSize" DetailSteps="true"/>
